team-app/main/default/objects/Pipeline_Week_Focus__c/Pipeline_Week_Focus__c.object-meta.xml
<CustomObject>
    <description>Monday-locked This Week snapshot. Priority and reason are frozen at lock time.</description>
    <label>Pipeline Week Focus</label>
    <pluralLabel>Pipeline Week Focus</pluralLabel>
    <nameField>
        <displayFormat>PWF-{000000}</displayFormat>
        <label>Focus Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>