team-app/main/default/objects/Pipeline_Week_Focus__c/fields/Carried_From_Prior_Week__c.field-meta.xml
<CustomField>
    <fullName>Carried_From_Prior_Week__c</fullName>
    <description>True when last week's Open item was boosted into this week.</description>
    <inlineHelpText>Received the +10 carryover boost.</inlineHelpText>
    <label>Carried From Prior Week</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>