team-app/main/default/objects/Pipeline_Week_Focus__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <description>Completion timestamp for the weekly progress strip.</description>
    <inlineHelpText>When Mark done was clicked.</inlineHelpText>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>