team-app/main/default/objects/Pipeline_Week_Focus__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Compound unique key. Running the lock twice for the same week upserts.</description>
    <inlineHelpText>OpportunityId-UserId-WeekStart. Unique. Makes Monday lock idempotent.</inlineHelpText>
    <label>External Id</label>
    <type>Text</type>
    <externalId>true</externalId>
    <length>80</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>