team-app/main/default/objects/Pipeline_Week_Focus__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Snapshot pointer. Clearing updates this row and the live Opportunity.</description>
    <inlineHelpText>Opportunity on this week's list.</inlineHelpText>
    <label>Opportunity</label>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Pipeline_Week_Focus</relationshipName>
    <required>true</required>
</CustomField>