team-app/main/default/objects/Pipeline_Week_Focus__c/fields/Priority_At_Lock__c.field-meta.xml
<CustomField>
    <fullName>Priority_At_Lock__c</fullName>
    <description>Priority at Monday 06:00, not the live score.</description>
    <inlineHelpText>Frozen This Week priority.</inlineHelpText>
    <label>Priority At Lock</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>