team-app/main/default/objects/Pipeline_Week_Focus__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Frozen rank at Monday lock.</description>
    <inlineHelpText>1..N at lock time.</inlineHelpText>
    <label>Rank</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>