team-app/main/default/objects/Pipeline_Week_Focus__c/fields/Reason_At_Lock__c.field-meta.xml
<CustomField>
    <fullName>Reason_At_Lock__c</fullName>
    <description>Why it made the list Monday.</description>
    <inlineHelpText>Frozen explainability.</inlineHelpText>
    <label>Reason At Lock</label>
    <type>Text</type>
    <length>255</length>
</CustomField>