team-app/main/default/objects/Pipeline_Week_Focus__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Per-user weekly commitment list.</description>
    <inlineHelpText>Whose Monday list this row belongs to.</inlineHelpText>
    <label>User</label>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>Pipeline_Week_Focus</relationshipName>
    <required>true</required>
</CustomField>