team-app/main/default/objects/Pipeline_Week_Focus__c/fields/Week_Start__c.field-meta.xml
<CustomField>
    <fullName>Week_Start__c</fullName>
    <description>Week key. Combined with Opportunity and User in External_Id__c.</description>
    <inlineHelpText>Monday of the locked week.</inlineHelpText>
    <label>Week Start</label>
    <type>Date</type>
</CustomField>